--- a/clusters/main/kubernetes/apps/networking/minio/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/minio/app/helm-release.yaml
@@ -20,6 +20,11 @@ spec:
         ingress:
             main:
                 enabled: true
+                hosts:
+                    - host: minio.${BASE_DOMAIN}
+                      paths:
+                        - path: /
+                          pathType: Prefix
                 integrations:
                     traefik:
                         enabled: true
@@ -33,11 +38,6 @@ spec:
                         certificateIssuer: wethecommon-prod-cert
                     homepage:
                         enabled: false
-                hosts:
-                    - host: minio.${BASE_DOMAIN}
-                      paths:
-                        - path: /
-                          pathType: Prefix
 #                tls:
 #                    hosts:
 #                        - minio.${BASE_DOMAIN}
@@ -50,8 +50,8 @@ spec:
                 ports:
                     main:
                         enabled: true
-                        port: 9002
-                        protocol: https
+                        port: 9000
+                        protocol: http
                 type: ExternalIP
                 useSlice: false
         workload:
