--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
                         name: Overseerr
                         widget:
                             type: overseerr
-                            url: https://overseerr.sf.wethecommon.com/
+                            url: http://${OVERSEERR_IP}/
                             key: MTczNDM5Mjc3ODUxNGVjYzE3ZTY2LTJlZWYtNDZiMi1hYzkxLTFiZTljZjkwOTgzOQ==
                             enabled: true
                 hosts:
