--- a/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
@@ -61,16 +61,16 @@ spec:
                 readOnly: false
                 main:
                     mountPath: /config
-                    volsync:
-                     - name: config
-                       type: restic
-                       credentials: s3
-                       dest:
-                         enabled: true
-                         cacheCapacity: 100Gi
-                       src:
-                         enabled: true
-                         cacheCapacity: 100Gi
+#                    volsync:
+#                     - name: config
+#                       type: restic
+#                       credentials: s3
+#                       dest:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
+#                       src:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
             data:
                 enabled: true
                 type: nfs
