--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -65,16 +65,16 @@ spec:
                 readOnly: false
                 main:
                     mountPath: /config
-                    volsync:
-                     - name: config
-                       type: restic
-                       credentials: s3
-                       dest:
-                         enabled: true
-                         cacheCapacity: 100Gi
-                       src:
-                         enabled: true
-                         cacheCapacity: 100Gi
+#                    volsync:
+#                     - name: config
+#                       type: restic
+#                       credentials: s3
+#                       dest:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
+#                       src:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
             data:
                 enabled: true
                 type: nfs
@@ -120,16 +120,16 @@ spec:
             backup:
                 enabled: true
                 mountPath: /config/Backups
-                volsync:
-                    - name: b2
-                      type: restic
-                      credentials: s3
-                      dest:
-                        cacheCapacity: 10Gi
-                        enabled: true
-                      src:
-                        enabled: true
-                        cacheCapacity: 10Gi
+#                volsync:
+#                    - name: b2
+#                      type: restic
+#                      credentials: s3
+#                      dest:
+#                        cacheCapacity: 10Gi
+#                        enabled: true
+#                      src:
+#                        enabled: true
+#                        cacheCapacity: 10Gi
         release_name: dizquetv
         resources:
             limits:
