--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -72,16 +72,16 @@ spec:
                 readOnly: false
                 main:
                     mountPath: /config
-                    volsync:
-                     - name: config
-                       type: restic
-                       credentials: s3
-                       dest:
-                         enabled: true
-                         cacheCapacity: 100Gi
-                       src:
-                         enabled: true
-                         cacheCapacity: 100Gi
+#                    volsync:
+#                     - name: config
+#                       type: restic
+#                       credentials: s3
+#                       dest:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
+#                       src:
+#                         enabled: true
+#                         cacheCapacity: 100Gi
             data:
                 enabled: true
                 type: nfs
@@ -141,16 +141,16 @@ spec:
             backup:
                 enabled: true
                 mountPath: /config/Backups
-                volsync:
-                    - name: b2
-                      type: restic
-                      credentials: s3
-                      dest:
-                        cacheCapacity: 10Gi
-                        enabled: true
-                      src:
-                        enabled: true
-                        cacheCapacity: 10Gi
+#                volsync:
+#                    - name: b2
+#                      type: restic
+#                      credentials: s3
+#                      dest:
+#                        cacheCapacity: 10Gi
+#                        enabled: true
+#                      src:
+#                        enabled: true
+#                        cacheCapacity: 10Gi
         securityContext:
             container:
                 UMASK: "022"
