--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -76,16 +76,16 @@ spec:
                 readOnly: false
                 main:
                     mountPath: /config
-                    volsync:
-                       - name: config
-                         type: restic
-                         credentials: s3
-                         dest:
-                           enabled: true
-                           cacheCapacity: 100Gi
-                         src:
-                           enabled: true
-                           cacheCapacity: 100Gi
+#                    volsync:
+#                       - name: config
+#                         type: restic
+#                         credentials: s3
+#                         dest:
+#                           enabled: true
+#                           cacheCapacity: 100Gi
+#                         src:
+#                           enabled: true
+#                           cacheCapacity: 100Gi
             data:
                 enabled: true
                 type: nfs
@@ -159,16 +159,16 @@ spec:
             backup:
                 enabled: true
                 mountPath: /config/Backups
-                volsync:
-                    - name: b2
-                      type: restic
-                      credentials: s3
-                      dest:
-                        enabled: true
-                        cacheCapacity: 10Gi
-                      src:
-                        enabled: true
-                        cacheCapacity: 10Gi
+#                volsync:
+#                    - name: b2
+#                      type: restic
+#                      credentials: s3
+#                      dest:
+#                        enabled: true
+#                        cacheCapacity: 10Gi
+#                      src:
+#                        enabled: true
+#                        cacheCapacity: 10Gi
         plex:
             additionalAdvertiseURL: ""
             disableGDM: false
