--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -84,7 +84,7 @@ spec:
                            enabled: true
                            cacheCapacity: 100Gi
                          src:
-                           enabled: true
+                           enabled: false
                            cacheCapacity: 100Gi
             data:
                 enabled: true
