--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
@@ -1,36 +1,61 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: nvidia-device-plugin
-  namespace: nvidia-device-plugin
+    name: nvidia-device-plugin
+    namespace: nvidia-device-plugin
 spec:
-  interval: 5m
-  chart:
-    spec:
-      chart: nvidia-device-plugin
-      version: 0.17.0
-      sourceRef:
-        kind: HelmRepository
-        name: nvdp
-        namespace: flux-system
-  install:
-    createNamespace: true
-    crds: CreateReplace
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      strategy: rollback
-      retries: 3
-  values:
-    gpu-operator:
+    interval: 5m
+    chart:
+        spec:
+            chart: nvidia-device-plugin
+            version:  0.17.0
+            sourceRef:
+                kind: HelmRepository
+                name: nvdp
+                namespace: flux-system
+            interval: 5m
+    install:
+        createNamespace: true
+        crds: CreateReplace
+        remediation:
+            retries: 3
+    upgrade:
+        cleanupOnFail: true
+        remediation:
+          strategy: rollback
+          retries: 3
+    values:
+      image:
+        repository: nvcr.io/nvidia/k8s-device-plugin
+        tag: v0.17.0
+      runtimeClassName: nvidia
+    #  affinity:
+    #    nodeAffinity:
+    #      requiredDuringSchedulingIgnoredDuringExecution:
+    #        nodeSelectorTerms:
+    #          - matchExpressions:
+   #               - key: feature.node.kubernetes.io/pci-0300_10de.present
+   #                 operator: In
+    #                values:
+    #                  - "true"
+      #        - matchExpressions:
+      #            - key: feature.node.kubernetes.io/pci-0300_1b36.present
+      #              operator: In
+      #              values:
+      #                - "true"
+      config:
+        map:
+          default: |-
+            version: v1
+            flags:
+              migStrategy: none
+            sharing:
+              timeSlicing:
+                renameByDefault: false
+                failRequestsGreaterThanOne: false
+                resources:
+                  - name: nvidia.com/gpu
+                    replicas: 5
       gfd:
         enabled: true
-        nodefeaturerules: true
-      runtimeClassName: nvidia
-      sharing:
-        timeSlicing:
-          resources:
-            - name: nvidia.com/gpu
-              replicas: 5
+      
