--- a/clusters/main/kubernetes/kube-system/kustomization.yaml
+++ b/clusters/main/kubernetes/kube-system/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - intel-device-plugins/ks.yaml
+  - kubeapps/ks.yaml
+  - nvidia-device-plugin/ks.yaml
+  - nvidia-gpu-operator/ks.yaml
   - cilium/ks.yaml
   - descheduler/ks.yaml
   - kubelet-csr-approver/ks.yaml
   - metrics-server/ks.yaml
   - node-feature-discovery/ks.yaml
-  - intel-device-plugins/ks.yaml
-  - kubeapps/ks.yaml
-#  - nvidia-gpu-operator/ks.yaml
-  - nvidia-device-plugin/ks.yaml
