--- a/repositories/helm/nvidia.yaml
+++ b/repositories/helm/nvidia.yaml
@@ -7,4 +7,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 2h
-  url: https://nvidia.github.io/k8s-device-plugin
+  url: https://helm.ngc.nvidia.com/nvidia
