--- a/repositories/git/truecharts.yaml
+++ b/repositories/git/truecharts.yaml
@@ -7,7 +7,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://github.com/truecharts/public/
+  url: ssh://git@github.com/truecharts/public.git
+  timeout: 10m
   ref:
     branch: master
   secretRef:
