--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/ks.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/ks.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: nvidia-gpu-operator
+  name: nvidia-device-plugin
   namespace: flux-system
 spec:
   interval: 10m
