--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -75,7 +75,17 @@ spec:
                 enabled: true
                 readOnly: false
                 main:
-                    mountPath: /config
+                  mountPath: /config
+                  volsync:
+                     - name: config
+                       type: restic
+                       credentials: s3
+                       dest:
+                         enabled: true
+                         cacheCapacity: 100Gi
+                       src:
+                         enabled: true
+                         cacheCapacity: 100Gi
 
             data:
                 enabled: false
