--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,7 @@
   "extends": [
     "config:recommended",
     "github>truecharts/public//.github/renovate/main.json5"
+    "github>zachbomb/clustertool-RC42//.github/custom.json5"
   ],
   "minor": {
     "packageRules": [
