--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    "github>truecharts/public//.github/renovate/main.json5"
+    "github>truecharts/public//.github/renovate/main.json5",
     "github>zachbomb/clustertool-RC42//.github/custom.json5"
   ],
   "minor": {
