--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
@@ -7,7 +7,7 @@ spec:
     interval: 5m
     chart:
         spec:
-            renovate: registryUrl=https://charts.truechartsoci.org
+            # renovate: registryUrl=https://charts.truechartsoci.org
             chart: nvidia-device-plugin
             version:  0.17.0
             sourceRef:
