--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -37,7 +37,7 @@ spec:
                         - Developer:
                             - Github:
                                 - abbr: GH
-                                  href: https://github.com/
+                                  href: https://github.com/zachbomb/clustertool-RC42/
 
                         - Social:
                             - Reddit:
@@ -304,51 +304,4 @@ spec:
             main:
                 enabled: true
                 primary: true
-        workload:
-            main:
-                podSpec:
-                    automountServiceAccountToken: true
-                    containers:
-                        main: {}
-                    initContainers:
-                        init-config:
-                            command:
-                                - /bin/sh
-                                - -c
-                                - |
-                                  mkdir -p /app/config
-                                  if [ ! -f /app/config/bookmarks.yaml ]; then
-                                    echo "Bookmarks file not found, copying dummy..."
-                                    cp /dummy-config/bookmarks.yaml /app/config/bookmarks.yaml
-                                    echo "Config file copied, you can now edit it at /app/config/bookmarks.yaml"
-                                  fi
-                                  if [ ! -f /app/config/services.yaml ]; then
-                                    echo "services file not found, copying dummy..."
-                                    cp /dummy-config/services.yaml /app/config/services.yaml
-                                    echo "Config file copied, you can now edit it at /app/config/services.yaml"
-                                  fi
-                                  if [ ! -f /app/config/settings.yaml ]; then
-                                    echo "settings file not found, copying dummy..."
-                                    cp /dummy-config/settings.yaml /app/config/settings.yaml
-                                    echo "Config file copied, you can now edit it at /app/config/settings.yaml"
-                                  fi
-                                  if [ ! -f /app/config/widgets.yaml ]; then
-                                    echo "widgets file not found, copying dummy..."
-                                    cp /dummy-config/widgets.yaml /app/config/widgets.yaml
-                                    echo "Config file copied, you can now edit it at /app/config/widgets.yaml"
-                                  fi
-                                  if [ ! -f /app/config/custom.css ]; then
-                                    echo "custom.css file not found, copying dummy..."
-                                    cp /dummy-config/custom.css /app/config/custom.css
-                                    echo "Config file copied, you can now edit it at /app/config/custom.css"
-                                  fi
-                                  if [ ! -f /app/config/custom.js ]; then
-                                    echo "custom.js file not found, copying dummy..."
-                                    cp /dummy-config/custom.js /app/config/custom.js
-                                    echo "Config file copied, you can now edit it at /app/config/custom.js"
-                                  fi
-                            enabled: true
-                            imageSelector: alpineImage
-                            type: init
-                replicas: 1
-                type: Deployment
+
