--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
                     homepage:
                         description: Music Management/Downloader
                         enabled: true
-                        group: *rrs
+                        group: -*rrs
                         icon: ""
                         name: Lidarr
                         widget:
