--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -80,7 +80,7 @@ spec:
           homepage:
             description: Movie Downloader/Manager
             enabled: true
-            group: *rrs
+            group: -*rrs
             icon: ""
             name: Radarr
             widget:
