--- a/clusters/main/kubernetes/apps/media/sonarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/sonarr/app/helm-release.yaml
@@ -55,7 +55,7 @@ spec:
                     homepage:
                         description: TV Downloader/Manager
                         enabled: true
-                        group: *rrs
+                        group: -*rrs
                         icon: ""
                         name: Sonarr
                         widget:
