--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -48,7 +48,7 @@ spec:
                         icon: ""
                         name: Overseerr
                         widget:
-                            overseerr:
+                            custom:
                               url: http://192.168.10.184
                               key: MTczNjMyNDAxNjE5MGMzMThjZDQ1LWRiNmUtNGFkZC1hMDM3LWEwM2FiMzg2ZDdkYQ==
                             enabled: true
