--- a/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
@@ -68,6 +68,11 @@ spec:
             traefik.ingress.kubernetes.io/router.tls: 'true'
             traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd,traefik-bouncer@kubernetescrd,traefik-local@kubernetescrd
           host: crowdsec.${BASE_DOMAIN}
+        service:
+          main:
+            enabled: true
+            type: LoadBalancer
+            loadBalancerIP: ${CROWDSEC_IP}
       env:
         - name: DISABLE_ONLINE_API
           value: "false"
