--- a/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/crowdsec/app/helm-release.yaml
@@ -37,11 +37,6 @@ spec:
       bouncer:
         reflector:
           namespaces: ["traefik"]
-    service:
-      main:
-        enabled: true
-        type: LoadBalancer
-        loadBalancerIP: ${CROWDSEC_IP}
     agent:
       acquisition:
         - namespace: traefik
@@ -73,6 +68,15 @@ spec:
             traefik.ingress.kubernetes.io/router.tls: 'true'
             traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd,traefik-bouncer@kubernetescrd,traefik-local@kubernetescrd
           host: crowdsec.${BASE_DOMAIN}
+        service:
+          main:
+            enabled: true
+            type: LoadBalancer
+            loadBalancerIP: ${CROWDSEC_IP}
+            ports:
+              main:
+                port: 5055
+                targetPort: 5055
       env:
         - name: DISABLE_ONLINE_API
           value: "false"
