--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
                 secretKey: "${S3KEY}"
                 encrKey: "${S3KEY}"
         TZ: America/Los_Angeles
+        configmap:
+            config: ""
         ingress:
             main:
                 enabled: true
