--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -27,7 +27,9 @@ spec:
                 encrKey: "${S3KEY}"
         TZ: America/Los_Angeles
         configmap:
-            config: ""
+            config:
+                enabled: true
+            data: ""
         ingress:
             main:
                 enabled: true
