--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -28,9 +28,7 @@ spec:
         TZ: America/Los_Angeles
         configmap:
             config:
-                enabled:
-                    value: true
-                data: ""
+                enabled: false
         ingress:
             main:
                 enabled: true
