--- a/clusters/main/kubernetes/apps/media/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/media/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - roon/ks.yaml
   - prowlarr/ks.yaml
   - radarr/ks.yaml
-  - dizquetv/ks.yaml
+  #- dizquetv/ks.yaml
   - emby/ks.yaml
   - lidarr/ks.yaml
   - nzbget/ks.yaml
