--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -61,7 +61,7 @@ spec:
                     ingress:
                         enabled: true
                         hosts:
-                        - host: dizquetv.code.${BASE_DOMAIN}
+                        - host: dizquetv-code.${BASE_DOMAIN}
                           paths:
                           - path: /
                             pathType: Prefix
