--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -80,6 +80,27 @@ spec:
 #                    - hosts:
 #                        - homepage.${BASE_DOMAIN}
 #                      secretName: homepage-tls
+        addons:
+            codeserver:
+                enabled: true
+                    ingress:
+                        enabled: true
+                        hosts:
+                        - host: homepage-code.${BASE_DOMAIN}
+                          paths:
+                          - path: /
+                            pathType: Prefix
+                        integrations:
+                            certManager:
+                                certificateIssuer: wethecommon-prod-cert
+                                enabled: true
+                            traefik:
+                                enabled: true
+                                middlewares:
+                                - name: local
+                                  namespace: traefik
+                                - name: bouncer
+                                  namespace: traefik
         persistence:
             config:
                 enabled: true
