--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -75,48 +75,48 @@ spec:
 #                       src:
 #                         enabled: true
 #                         cacheCapacity: 100Gi
-            data:
-                enabled: true
-                type: nfs
-                path: /mnt/Pibbs-Horde/media/data
-                server: 192.168.10.123
-                mountPath: /data
-                mountOptions:
-                 - nfsvers=4
-                 - tcp
-                 - intr
-                 - hard
-                 - noatime
-                 - nodiratime
-                 - nolock
-            movies:
-                enabled: true
-                type: nfs
-                path: /mnt/Pibbs-Horde/media/data/media/movies
-                server: 192.168.10.123
-                mountPath: /movies
-                mountOptions:
-                 - nfsvers=4
-                 - tcp
-                 - intr
-                 - hard
-                 - noatime
-                 - nodiratime
-                 - nolock
-            tv:
-                enabled: true
-                type: nfs
-                path: /mnt/Pibbs-Horde/media/data/media/tv
-                server: 192.168.10.123
-                mountPath: /tv
-                mountOptions:
-                 - nfsvers=4
-                 - tcp
-                 - intr
-                 - hard
-                 - noatime
-                 - nodiratime
-                 - nolock
+#            data:
+#                enabled: true
+#                type: nfs
+#                path: /mnt/Pibbs-Horde/media/data
+#                server: 192.168.10.123
+#                mountPath: /data
+#                mountOptions:
+#                 - nfsvers=4
+#                 - tcp
+#                 - intr
+#                 - hard
+#                 - noatime
+#                 - nodiratime
+#                 - nolock
+#            movies:
+#                enabled: true
+#                type: nfs
+#                path: /mnt/Pibbs-Horde/media/data/media/movies
+#                server: 192.168.10.123
+#                mountPath: /movies
+#                mountOptions:
+#                 - nfsvers=4
+#                 - tcp
+#                 - intr
+#                 - hard
+#                 - noatime
+#                 - nodiratime
+#                 - nolock
+#            tv:
+#                enabled: true
+#                type: nfs
+#                path: /mnt/Pibbs-Horde/media/data/media/tv
+#                server: 192.168.10.123
+#                mountPath: /tv
+#                mountOptions:
+#                 - nfsvers=4
+#                 - tcp
+#                 - intr
+#                 - hard
+#                 - noatime
+#                 - nodiratime
+#                 - nolock
             xmltv:
                 enabled: true
                 type: nfs
