--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -131,9 +131,9 @@ spec:
                  - noatime
                  - nodiratime
                  - nolock
-            backup:
-                enabled: true
-                mountPath: /config/Backups
+#            backup:
+#                enabled: true
+#                mountPath: /config/Backups
 #                volsync:
 #                    - name: b2
 #                      type: restic
