--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -60,11 +60,11 @@ spec:
             repository: vexorian/dizquetv
             tag: 1.5.5-nvidia@sha256:e93f121e458c56e93eaa0db3c94d03c8c00760616a781db770d9bbec49692ed3
         persistence:
-#            config:
-#                enabled: true
-#                readOnly: false
-#                main:
-#                    mountPath: /config
+            config:
+                enabled: true
+                readOnly: false
+                main:
+                    mountPath: /config
 #                    volsync:
 #                     - name: config
 #                       type: restic
@@ -147,7 +147,7 @@ spec:
         release_name: dizquetv
         resources:
             limits:
-                gpu.intel.com/i915: 1
+                nvidia.com/gpu: 1
         securityContext:
             container:
                 PUID: 1000
@@ -168,6 +168,10 @@ spec:
                         port: 10071
                         targetPort: 8000
                 type: LoadBalancer
+        workload:
+            main:
+                podSpec:
+                    runtimeClassName: "nvidia"
         addons:
             codeserver:
                 enabled: true
