--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -151,6 +151,7 @@ spec:
                  - nodiratime
                  - nolock
             backup:
+                enabled: true
                 volsync:
                 - name: config
                   type: restic
