--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -151,16 +151,14 @@ spec:
                  - nodiratime
                  - nolock
             backup:
-                enabled: true
-                mountPath: /config/Backups
-#                volsync:
-#                - name: config
-#                  type: restic
-#                  credentials: s3
-#                  dest:
-#                    enabled: true
-#                  src:
-#                    enabled: true
+                volsync:
+                - name: config
+                  type: restic
+                  credentials: s3
+                  dest:
+                    enabled: true
+                  src:
+                    enabled: true
         plex:
             additionalAdvertiseURL: ""
             disableGDM: false
