--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -151,6 +151,8 @@ spec:
                  - nodiratime
                  - nolock
             backup:
+                enabled: true
+                mountPath: /config/Backups
                 volsync:
                 - name: config
                   type: restic
