--- a/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/networking/homepage/app/helm-release.yaml
@@ -51,17 +51,16 @@ spec:
                 enabled: true
                 readOnly: false
                 main:
-                    mountPath: /config
-#                    volsync:
-#                        - name: config
-#                          type: restic
-#                          credentials: s3
-#                          dest:
-#                            enabled: true
-#                            cacheCapacity: 10Gi
-#                          src:
-#                            enabled: true
-#                            cacheCapacity: 10Gi
+                    volsync:
+                        - name: config
+                          type: restic
+                          credentials: s3
+                          dest:
+                            enabled: true
+                            cacheCapacity: 10Gi
+                          src:
+                            enabled: true
+                            cacheCapacity: 10Gi
         podOptions:
             dnsConfig:
                 options:
