--- a/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
@@ -60,23 +60,20 @@ spec:
                 enabled: true
                 readOnly: false
                 main:
-                    mountPath: /config
-#                    volsync:
-#                     - name: config
-#                       type: restic
-#                       credentials: s3
-#                       dest:
-#                         enabled: true
-#                         cacheCapacity: 100Gi
-#                       src:
-#                         enabled: true
-#                         cacheCapacity: 100Gi
-            data:
+                    volsync:
+                     - name: config
+                       type: restic
+                       credentials: s3
+                       dest:
+                         enabled: true
+                       src:
+                         enabled: true
+            media:
                 enabled: true
                 type: nfs
                 path: /mnt/Pibbs-Horde/media/data
                 server: 192.168.10.123
-                mountPath: /data
+                mountPath: /media
                 mountOptions:
                  - nfsvers=4
                  - tcp
