--- a/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
@@ -139,14 +139,17 @@ spec:
                  - nodiratime
                  - nolock
             backup:
-                volsync:
-                    - name: b2
-                      type: restic
-                      credentials: s3
-                      dest:
-                        enabled: true
-                      src:
-                        enabled: true
+                enabled: true
+                mountPath: /config/Backups
+#                volsync:
+#                    - name: b2
+#                      type: restic
+#                      credentials: s3
+#                      dest:
+#                        enabled: true
+#                      src:
+#                        enabled: true
+
         release_name: emby
         resources:
             limits:
